--- a/WorkTime.Web/Views/_ViewStart.cshtml
+++ b/WorkTime.Web/Views/_ViewStart.cshtml
@@ -1,3 +1,9 @@
-﻿@{
-    Layout = "_Layout";
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+@{
+    //if (SignInManager.IsSignedIn(User))
+    //{
+        Layout = "_Layout";
+    //}
 }
