--- a/WorkTime.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/WorkTime.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -18,6 +18,21 @@
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-floating">
+                <input asp-for="Input.Name" class="form-control" autocomplete="Name" aria-required="true" />
+                <label>Имя</label>
+                <span asp-validation-for="Input.Name" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <input asp-for="Input.Surname" class="form-control" autocomplete="Surname" aria-required="true" />
+                <label>Фамилия</label>
+                <span asp-validation-for="Input.Surname" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <input asp-for="Input.Patronymic" class="form-control" autocomplete="Patronymic" />
+                <label>Отчество</label>
+                <span asp-validation-for="Input.Patronymic" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
                 <label asp-for="Input.Password"></label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
@@ -30,39 +45,6 @@
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
-    @{/*
-        <div class="col-md-6 col-md-offset-2">
-        <section>
-        <h3>Use another service to register.</h3>
-        <hr />
-        @{
-        if ((Model.ExternalLogins?.Count ?? 0) == 0)
-        {
-        <div>
-        <p>
-        There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-        about setting up this ASP.NET application to support logging in via external services</a>.
-        </p>
-        </div>
-        }
-        else
-        {
-        <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-        <div>
-        <p>
-        @foreach (var provider in Model.ExternalLogins)
-        {
-        <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-        }
-        </p>
-        </div>
-        </form>
-        }
-        }
-        </section>
-        </div>
-        */
-    }
 </div>
 
 @section Scripts {
