--- a/WorkTime.Web/Views/Home/Index.cshtml
+++ b/WorkTime.Web/Views/Home/Index.cshtml
@@ -1,8 +1,29 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+
+@{
     ViewData["Title"] = "Начальная страница";
 }
 
-<div class="text-center">
-    <h1>Начальная страница</h1>
-    <p>сюда будет добавлен экран приветствия с кнопками входа и регистрации</p>
-</div>
+@if (SignInManager.IsSignedIn(User))
+{
+    <div class="text-center" style="margin-top: 100pt">
+        <h1>Начальная страница</h1>
+        <p>Надо что-то сюда добавить будет</p>
+    </div>
+}
+else
+{
+    <div class="text-center" style="margin-top: 100pt">
+        <h1>Добро пожаловать</h1>
+        <p>Войдите в систему, или зарегестрируйтесь</p>
+        <div>
+            <a class="btn btn-outline-primary btn-lg btn-tr transition-2s" role="button" aria-pressed="true" style="width: 220px"
+           asp-area="Identity" asp-page="/Account/Login">Войти</a>
+            <a class="btn btn-primary btn-lg btn-tr transition-2s" role="button" aria-pressed="true" style="width: 220px"
+           asp-area="Identity" asp-page="/Account/Register">Зарегестрироваться</a>
+            
+        </div>
+    </div>
+}
+
