--- a/WorkTime.Web/Views/Shared/_Layout.cshtml
+++ b/WorkTime.Web/Views/Shared/_Layout.cshtml
@@ -12,13 +12,14 @@
     <header>
         <partial name="_NavBar" />
     </header>
+    <partial name="_SideBar" />
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted fixed-bottom">
         <div class="container">
             &copy; 2022 - WT_CRM - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
