--- a/WorkTime.Web/wwwroot/css/site.css
+++ b/WorkTime.Web/wwwroot/css/site.css
@@ -1,5 +1,6 @@
 html {
-  font-size: 14px;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    font-size: 1rem;
 }
 
 @media (min-width: 768px) {
@@ -13,6 +14,29 @@ html {
   min-height: 100%;
 }
 
+.bd-sidebar {
+    top: 0px;
+    position: absolute;
+    border-right: 1px solid rgba(0,0,0,.1);
+    background-color: #e2e2e2;
+    width: 200pt;
+}
+
 body {
   margin-bottom: 60px;
+}
+
+.transition-2s {
+    transition: 0.5s;
+}
+
+.bd-toc-link {
+    display: block;
+    padding: 0.25rem 1.5rem;
+    font-weight: 500;
+    color: rgba(0,0,0,.65);
+}
+
+.height92pt {
+    max-height: 92pt;
 }
