--- a/WorkTime.Web/Views/Shared/_SideBar.cshtml
+++ b/WorkTime.Web/Views/Shared/_SideBar.cshtml
@@ -32,6 +32,11 @@
                     <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline text-dark">Счета</span>
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link align-middle px-0" asp-area="" asp-controller="Projects" asp-action="Index">
+                    <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline text-dark">Проекты</span>
+                </a>
+            </li>
         </ul>
         <hr>
     </div>
