--- a/WorkTime.Web/Views/Projects/Details.cshtml
+++ b/WorkTime.Web/Views/Projects/Details.cshtml
@@ -22,6 +22,9 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Bonus)
         </dd>
+        <dd class="col-sm10">
+            <a type="button" class="btn btn-primary" asp-action="AddUserInProject" asp-route-id="@Model?.Id">Добавить пользователя</a>
+        </dd>
     </dl>
 </div>
 <div>
