--- a/WorkTime.Web/Views/Tasks/Create.cshtml
+++ b/WorkTime.Web/Views/Tasks/Create.cshtml
@@ -38,8 +38,8 @@
                 <select asp-for="TaskStatusId" class ="form-control" asp-items="ViewBag.TaskStatusId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="IssuerId" class="control-label"></label>
-                <select asp-for="IssuerId" class ="form-control" asp-items="ViewBag.IssuerId"></select>
+                <label asp-for="PerformerId" class="control-label"></label>
+                <select asp-for="PerformerId" class="form-control" asp-items="ViewBag.PerformerId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
