--- a/WorkTime.Web/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/WorkTime.Web/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -1,4 +1,5 @@
-﻿@page
+﻿@{/*
+@page
 @model DeletePersonalDataModel
 @{
     ViewData["Title"] = "Delete Personal Data";
@@ -30,4 +31,6 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+}
+*/
 }
