--- a/WorkTime.Web/Views/Invoices/Create.cshtml
+++ b/WorkTime.Web/Views/Invoices/Create.cshtml
@@ -178,7 +178,7 @@
                     hourlyWage : wage
                 },
                 success: function (result) {
-                    alert("success");
+                    location.href = "/Invoices/";
                 }
             });
         }
