--- a/WorkTime.Web/Areas/Identity/Pages/Account/Manage/DownloadPersonalData.cshtml
+++ b/WorkTime.Web/Areas/Identity/Pages/Account/Manage/DownloadPersonalData.cshtml
@@ -1,12 +1,15 @@
-﻿@page
-@model DownloadPersonalDataModel
-@{
+﻿@{/*
+        @page
+        @model DownloadPersonalDataModel
+    @{
     ViewData["Title"] = "Download Your Data";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
-}
+        }
 
-<h3>@ViewData["Title"]</h3>
+        <h3>@ViewData["Title"]</h3>
 
-@section Scripts {
+    @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    }
+    */
 }
