--- a/WorkTime.Web/Views/Shared/_NavBar.cshtml
+++ b/WorkTime.Web/Views/Shared/_NavBar.cshtml
@@ -6,10 +6,12 @@
 
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container-fluid">
-            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#sideBar" aria-expanded="false" aria-controls="sideBar">
-                =
-            </button>
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">WT_CRM</a>
+            <div class="menu-with-logo">
+                <button class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#sideBar" aria-expanded="false" aria-controls="sideBar">
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+                </button>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">WT_CRM</a>
+            </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
