--- a/WorkTime.Web/Views/Tasks/Create.cshtml
+++ b/WorkTime.Web/Views/Tasks/Create.cshtml
@@ -4,45 +4,40 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Создать задачу</h1>
 
-<h4>WorkTask</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="TaskName" class="control-label"></label>
+                <label asp-for="TaskName" class="control-label">Название задачи</label>
                 <input asp-for="TaskName" class="form-control" />
                 <span asp-validation-for="TaskName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TaskText" class="control-label"></label>
+                <label asp-for="TaskText" class="control-label">Текст задачи</label>
                 <input asp-for="TaskText" class="form-control" />
                 <span asp-validation-for="TaskText" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProjectId" class="control-label"></label>
+                <label asp-for="ProjectId" class="control-label">Проект</label>
                 <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId" onchange="getUsers()">
                     <option value="0" selected>Без проекта</option>
                 </select>
             </div>
             <div class="form-group">
-                <label asp-for="CountOfHours" class="control-label"></label>
+                <label asp-for="CountOfHours" class="control-label">Кол-во часов</label>
                 <input asp-for="CountOfHours" class="form-control" />
                 <span asp-validation-for="CountOfHours" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TaskStatusId" class="control-label"></label>
-                <select asp-for="TaskStatusId" class ="form-control" asp-items="ViewBag.TaskStatusId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="PerformerId" class="control-label"></label>
+                <label asp-for="PerformerId" class="control-label">Исполнитель</label>
                 <select asp-for="PerformerId" class="form-control" asp-items="ViewBag.PerformerId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Создать" class="btn btn-primary" />
             </div>
         </form>
     </div>
