--- a/WorkTime.Web/wwwroot/css/site.css
+++ b/WorkTime.Web/wwwroot/css/site.css
@@ -40,3 +40,26 @@ body {
 .height92pt {
     max-height: 92pt;
 }
+
+#sideBar {
+    height: 100%;
+}
+
+.menu-with-logo {
+    align-items: center;
+    top: 0;
+    left: 0;
+}
+
+.dark-background {
+    position: fixed;
+    z-index: 9999999;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    margin: 0;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.5);
+}
