--- a/WorkTime.Web/Views/Projects/Index.cshtml
+++ b/WorkTime.Web/Views/Projects/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<WorkTime.Models.Project>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Проекты";
 }
 
 <h1>Проекты</h1>
@@ -13,10 +13,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                Название
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Bonus)
+                Бонус проекта
             </th>
             <th></th>
         </tr>
