--- a/WorkTime.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/WorkTime.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,50 +1,50 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Регистрация";
 }
 
-<h1>@ViewData["Title"]</h1>
 
-<div class="row">
-    <div class="col-md-4">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
-            <hr />
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                <label asp-for="Input.Email"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="form-floating">
-                <input asp-for="Input.Name" class="form-control" autocomplete="Name" aria-required="true" />
-                <label>Имя</label>
-                <span asp-validation-for="Input.Name" class="text-danger"></span>
-            </div>
-            <div class="form-floating">
-                <input asp-for="Input.Surname" class="form-control" autocomplete="Surname" aria-required="true" />
-                <label>Фамилия</label>
-                <span asp-validation-for="Input.Surname" class="text-danger"></span>
-            </div>
-            <div class="form-floating">
-                <input asp-for="Input.Patronymic" class="form-control" autocomplete="Patronymic" />
-                <label>Отчество</label>
-                <span asp-validation-for="Input.Patronymic" class="text-danger"></span>
-            </div>
-            <div class="form-floating">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.Password"></label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-floating">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.ConfirmPassword"></label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
-        </form>
-    </div>
+<div class="mx-auto col-md-5 background_login" style="margin-top: 20pt">
+    <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+        <h4 class="text-center">Регистрация</h4>
+        <hr />
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="form-floating">
+            <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
+            <label asp-for="Input.Email"></label>
+            <span asp-validation-for="Input.Email" class="text-danger"></span>
+        </div>
+        <div class="form-floating mt-2">
+            <input asp-for="Input.Name" class="form-control" autocomplete="Name" aria-required="true" />
+            <label>Имя</label>
+            <span asp-validation-for="Input.Name" class="text-danger"></span>
+        </div>
+        <div class="form-floating mt-2">
+            <input asp-for="Input.Surname" class="form-control" autocomplete="Surname" aria-required="true" />
+            <label>Фамилия</label>
+            <span asp-validation-for="Input.Surname" class="text-danger"></span>
+        </div>
+        <div class="form-floating mt-2">
+            <input asp-for="Input.Patronymic" class="form-control" autocomplete="Patronymic" />
+            <label>Отчество</label>
+            <span asp-validation-for="Input.Patronymic" class="text-danger"></span>
+        </div>
+        <div class="form-floating mt-2">
+            <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
+            <label asp-for="Input.Password">Пароль</label>
+            <span asp-validation-for="Input.Password" class="text-danger"></span>
+        </div>
+        <div class="form-floating mt-2">
+            <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
+            <label asp-for="Input.ConfirmPassword">Подтверждение пароля</label>
+            <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+        </div>
+        <button id="registerSubmit" type="submit" class="mt-3 w-100 btn btn-lg btn-primary">Register</button>
+        <p class="mt-3">
+            <a style="text-decoration: none" asp-page="./Login" asp-route-returnUrl="@Model.ReturnUrl">Уже есть аккаунт</a>
+        </p>
+    </form>
 </div>
 
 @section Scripts {
