--- a/WorkTime.Web/wwwroot/css/site.css
+++ b/WorkTime.Web/wwwroot/css/site.css
@@ -63,3 +63,9 @@ body {
     left: 0;
     background: rgba(0, 0, 0, 0.5);
 }
+
+.background_login {
+    border: 1px solid #dadce0;
+    border-radius: 8px;
+    padding: 48px 40px 36px;
+}
